# reprojection

./: .gitignore  LICENSE  README.md
ML-model-retraining/: train.py
activity_tagger/: Activities.py  README.md  tagger_gui.py
calibration/: README.md  capture_camera_pair.py  read_all_streams.py
capture/: CMakeLists.txt  detect_clicking.py  kinect_main.cpp  kinects.yaml  launch.py  omni_main.cpp  test_load_depth.py
config/: config.json  load_config.py
docs/: README.md  calibration.md  capture.md  folders.md  guide.md  reprojection.md  sync.md
generate-masks/: .#events.py  Dockerfile  README.md  build-docker.sh  densepose_rcnn_R_50_FPN_DL_WC1_s1x.yaml  events.py  run-docker-bash.sh  run_on_file.py
generate_masks/: Dockerfile  mask_runner.py  run-docker-bash.sh
helper-scripts/: anonymize_faces.py  check_for_person.py  check_openpose.py  get_stats.py  image_scroller.py  interactive_calibrator.py  mask-runner.py  mask_runner.py  mesh_scroller.py  patch-broken-files.ipynb  patch_broken_files.ipynb  pose-to-mask.py  reproject.ipynb  resize_images.ipynb  symlinker.py  sync_files.py  timeliner.ipynb  trim_videos.py  validate_cam_matrix.ipynb  visualization_helper.py
helper_scripts/: calibration_selector.py  check_files_parity.py  check_for_person.py  image_scroller.py  make_activity_dataset.py  make_segmentation_masks.py  patch_broken_files.ipynb  pose-to-mask.py  pose_to_mask.py  remove_broken_files.py  resize_images.ipynb  save_3d_skeletons.py  silence.py  validate_cam_matrix.ipynb
humor_inference/: .gitignore  README.md  detect_persons.py  pipeline.py  (+12 more)
(+84 files in other folders)
